@@ -1,5 +1,5 @@
 /*
- * Copyright © 2015 - 2021 ReSys (info@dialob.io)
+ * Copyright © 2015 - 2025 ReSys (info@dialob.io)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,8 +15,6 @@
  */
 package io.dialob.session.engine;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Lists;
 import com.google.protobuf.CodedInputStream;
 import com.google.protobuf.CodedOutputStream;
 import edu.umd.cs.findbugs.annotations.NonNull;
@@ -41,43 +39,31 @@ import java.time.Duration;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.Period;
-import java.util.*;
+import java.util.Collection;
+import java.util.Date;
+import java.util.List;
+import java.util.Optional;
 import java.util.function.Consumer;
 import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
-public class Utils {
+public final class Utils {
+
+  private Utils() {}
 
   public static Optional<ValueType> mapQuestionTypeToValueType(String type) {
     if (type != null) {
-      switch (type) {
-        case "text":
-          return Optional.of(ValueType.STRING);
-        case "boolean":
-          return Optional.of(ValueType.BOOLEAN);
-        case "list":
-          return Optional.of(ValueType.STRING);
-        case "date":
-          return Optional.of(ValueType.DATE);
-        case "time":
-          return Optional.of(ValueType.TIME);
-        case "number":
-          return Optional.of(ValueType.INTEGER);
-        case "decimal":
-          return Optional.of(ValueType.DECIMAL);
-        case "multichoice":
-          return Optional.of(ValueType.arrayOf(ValueType.STRING));
-        case "rowgroup":
-          return Optional.of(ValueType.arrayOf(ValueType.INTEGER));
-        case "survey":
-          return Optional.of(ValueType.STRING);
-        case "row":
-        case "note":
-        case "group":
-        case "questionnaire":
-        case "surveygroup":
-          return Optional.empty();
-      }
+      return Optional.ofNullable(switch (type) {
+        case Constants.TEXT, Constants.LIST, Constants.SURVEY -> ValueType.STRING;
+        case Constants.BOOLEAN -> ValueType.BOOLEAN;
+        case Constants.DATE -> ValueType.DATE;
+        case Constants.TIME -> ValueType.TIME;
+        case Constants.NUMBER -> ValueType.INTEGER;
+        case Constants.DECIMAL -> ValueType.DECIMAL;
+        case Constants.MULTICHOICE -> ValueType.arrayOf(ValueType.STRING);
+        case Constants.ROWGROUP -> ValueType.arrayOf(ValueType.INTEGER);
+        // ROW, NOTE, GROUP, QUESTIONNAIRE, SURVEYGROUP
+        default -> null;
+      });
     }
     return Optional.empty();
   }
@@ -87,67 +73,29 @@ public class Utils {
   }
 
   public static boolean isContextVariable(@NonNull String type) {
-    return "context".equals(type);
+    return Constants.CONTEXT.equals(type);
   }
 
   public static boolean isProgramVariable(@NonNull String type) {
-    return "variable".equals(type);
+    return Constants.VARIABLE.equals(type);
   }
 
   public static boolean isNote(@NonNull String type) {
-    return "note".equals(type);
+    return Constants.NOTE.equals(type);
   }
 
   public static boolean isRowgroup(@NonNull String type) {
-    return "rowgroup".equals(type);
+    return Constants.ROWGROUP.equals(type);
   }
 
-
-  @NonNull
-  public static String mapValueTypeToType(@NonNull ValueType valueType) {
-    if (valueType == ValueType.STRING) {
-      return "text";
-    }
-    if (valueType == ValueType.BOOLEAN) {
-      return "boolean";
-    }
-    if (valueType.isArray()) {
-      return "list";
-    }
-    if (valueType == ValueType.DATE) {
-      return "date";
-    }
-    if (valueType == ValueType.TIME) {
-      return "time";
-    }
-    if (valueType == ValueType.INTEGER) {
-      return "number";
-    }
-    if (valueType == ValueType.DECIMAL) {
-      return "decimal";
-    }
-    throw new RuntimeException("Unknown question type " + valueType);
-  }
-
-  public static boolean isGroupType(@NonNull ItemState itemState) {
-    return !isQuestionType(itemState);
-  }
 
   public static boolean isQuestionType(@NonNull ItemState itemState) {
-    switch (itemState.getType()) {
-      case Constants.QUESTIONNAIRE:
-      case "group":
-      case "note":
-      case "variable":
-      case "context":
-      case "surveygroup":
-        return false;
-      case "rowgroup":
+    return switch (itemState.getType()) {
+      case Constants.QUESTIONNAIRE, Constants.GROUP, Constants.NOTE, Constants.VARIABLE, Constants.CONTEXT, Constants.SURVEYGROUP -> false;
         // rows are not questions, but row containers answer holds row order on answer.
-        return itemState.getPrototypeId() == null;
-      default:
-        return true;
-    }
+      case Constants.ROWGROUP -> itemState.getPrototypeId() == null;
+      default -> true;
+    };
   }
 
   @Nullable
@@ -168,16 +116,16 @@ public class Utils {
       return null;
     }
     if (!valueType.isArray()) {
-      if (value instanceof String) {
+      if (value instanceof String string) {
         try {
-          return valueType.parseFromString((String) value);
+          return valueType.parseFromString(string);
         } catch (Exception ignored) {
         }
       }
-      return valueType.coerseFrom(value);
+      return valueType.coerceFrom(value);
     }
-    if (value instanceof Collection) {
-      return ((Collection)value).stream().map(i -> i instanceof Integer ? BigInteger.valueOf((Integer)i) : i).collect(Collectors.toList());
+    if (value instanceof Collection collection) {
+      return collection.stream().map(item -> item instanceof Integer i ? BigInteger.valueOf(i) : item).toList();
     }
     // TODO handle array answers
     return null;
@@ -187,7 +135,7 @@ public class Utils {
   public static ValueSet toValueSet(@NonNull ValueSetState valueSetState) {
     return ImmutableValueSet.builder()
       .id(IdUtils.toString(valueSetState.getId()))
-      .entries(valueSetState.getEntries().stream().map(entry -> ImmutableValueSetEntry.builder().key(entry.getId()).value(entry.getLabel()).build()).collect(Collectors.toList())).build();
+      .entries(valueSetState.getEntries().stream().map(entry -> ImmutableValueSetEntry.builder().key(entry.getId()).value(entry.getLabel()).build()).toList()).build();
   }
 
   @NonNull
@@ -223,7 +171,7 @@ public class Utils {
     }
     if (!itemState.getItems().isEmpty()) {
       // TODO handled indexed references
-      actionItemBuilder.items(itemState.getItems().stream().map(IdUtils::toString).collect(Collectors.toList()));
+      actionItemBuilder.items(itemState.getItems().stream().map(IdUtils::toString).toList());
     }
     actionItemBuilder.label(itemState.getLabel());
     actionItemBuilder.description(itemState.getDescription());
@@ -231,7 +179,7 @@ public class Utils {
       actionItemBuilder.allowedActions(itemState.getAllowedActions());
     }
     if (!itemState.getAvailableItems().isEmpty()) {
-      actionItemBuilder.availableItems(itemState.getAvailableItems().stream().map(IdUtils::toString).collect(Collectors.toList()));
+      actionItemBuilder.availableItems(itemState.getAvailableItems().stream().map(IdUtils::toString).toList());
     }
     itemState.getValueSetId().ifPresent(actionItemBuilder::valueSetId);
     if (post != null) {
@@ -279,20 +227,19 @@ public class Utils {
     final boolean present = value != null;
     output.writeBoolNoTag(present);
     if (present) {
-      if (value instanceof String) {
+      if (value instanceof String string) {
         output.write((byte) 1);
-        output.writeStringNoTag((String) value);
-      } else if (value instanceof BigInteger) {
+        output.writeStringNoTag(string);
+      } else if (value instanceof BigInteger bigInteger) {
         output.write((byte) 2);
-        output.writeInt32NoTag((Integer) value);
+        writeBigInteger(output, bigInteger);
       } else if (value instanceof Boolean) {
         output.write((byte) 3);
         output.writeBoolNoTag((Boolean) value);
       } else if (value instanceof Double) {
         output.write((byte) 4);
         output.writeDoubleNoTag((Double) value);
-      } else if (value instanceof List) {
-        List listValue = (List) value;
+      } else if (value instanceof List listValue) {
         final int size = listValue.size();
         if (size == 0) {
           output.write((byte) 0x80); // empty list
@@ -331,27 +278,27 @@ public class Utils {
         case 1:
           return input.readString();
         case 2:
-          return input.readInt32();
+          return readBigInteger(input);
         case 3:
           return input.readBool();
         case 4:
           return input.readDouble();
         case (byte) 0x80:
-          return ImmutableList.of();
+          return List.of();
         case (byte) 0x81:
           count = input.readInt32();
           String[] strings = new String[count];
           for (int i = 0; i < count; ++i) {
             strings[i] = input.readString();
           }
-          return ImmutableList.copyOf(strings);
+          return List.of(strings);
         case (byte) 0x82:
           count = input.readInt32();
           BigInteger[] integers = new BigInteger[count];
           for (int i = 0; i < count; ++i) {
             integers[i] = readBigInteger(input);
           }
-          return ImmutableList.copyOf(integers);
+          return List.of(integers);
       }
     }
     return null;
@@ -367,9 +314,9 @@ public class Utils {
     if (value == null) {
       return null;
     }
-    if (value instanceof String) {
+    if (value instanceof String s) {
       try {
-        return valueType.parseFromString((String) value);
+        return valueType.parseFromString(s);
       } catch (Exception e) {
         errorListener.accept(createError(id, "INVALID_DEFAULT_VALUE"));
         return null;
@@ -393,11 +340,14 @@ public class Utils {
     if (value instanceof BigDecimal && valueType == ValueType.DECIMAL) {
       return value;
     }
-    if (value instanceof Integer && valueType == ValueType.INTEGER) {
-      return value;
+    if (value instanceof Integer i && valueType == ValueType.INTEGER) {
+      return BigInteger.valueOf(i);
     }
-    if (value instanceof Double && valueType == ValueType.DECIMAL) {
-      return BigDecimal.valueOf((Double) value);
+    if (value instanceof Long l && valueType == ValueType.INTEGER) {
+      return BigInteger.valueOf(l);
+    }
+    if (value instanceof Double aDouble && valueType == ValueType.DECIMAL) {
+      return BigDecimal.valueOf(aDouble);
     }
     errorListener.accept(createError(id, "INVALID_DEFAULT_VALUE"));
     return null;
