@@ -1,5 +1,5 @@
 /*
- * Copyright © 2015 - 2021 ReSys (info@dialob.io)
+ * Copyright © 2015 - 2025 ReSys (info@dialob.io)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -77,6 +77,6 @@ public class ValueSetValidator implements FormValidator {
   @NonNull
   @Override
   public List<FormValidationError> validate(Form form) {
-    return form.getValueSets().stream().map(this::checkValueSet).flatMap(List::stream).collect(Collectors.toList());
+    return form.getValueSets().stream().map(this::checkValueSet).flatMap(List::stream).toList();
   }
 }
