@@ -1,5 +1,5 @@
 /*
- * Copyright © 2015 - 2021 ReSys (info@dialob.io)
+ * Copyright © 2015 - 2025 ReSys (info@dialob.io)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,8 +25,6 @@ import org.immutables.value.Value;
 import java.util.Collection;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 @Value.Immutable
 public interface RowItemsExpression extends Expression {
 
@@ -40,7 +38,7 @@ public interface RowItemsExpression extends Expression {
 
   @Override
   default Collection<ItemId> eval(@NonNull EvalContext evalContext) {
-    return getItemIds().stream().map(itemId -> evalContext.mapTo(itemId, true)).collect(toList());
+    return getItemIds().stream().map(itemId -> evalContext.mapTo(itemId, true)).toList();
   }
 
 }
