@@ -1,5 +1,5 @@
 /*
- * Copyright © 2015 - 2021 ReSys (info@dialob.io)
+ * Copyright © 2015 - 2025 ReSys (info@dialob.io)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,10 +15,6 @@
  */
 package io.dialob.session.engine.session;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Lists;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import io.dialob.session.engine.Utils;
 import io.dialob.session.engine.program.expr.arith.RowItemsExpression;
@@ -27,14 +23,13 @@ import io.dialob.session.engine.session.command.Command;
 import io.dialob.session.engine.session.command.CommandFactory;
 import io.dialob.session.engine.session.command.UpdateCommand;
 import io.dialob.session.engine.session.model.*;
+import lombok.Getter;
 
 import java.math.BigInteger;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static io.dialob.session.engine.Utils.*;
-import static java.util.stream.Collectors.toList;
 
 public class CreateDialobSessionProgramVisitor implements ProgramVisitor {
 
@@ -50,6 +45,7 @@ public class CreateDialobSessionProgramVisitor implements ProgramVisitor {
 
   private final Date lastAnswer;
 
+  @Getter
   private DialobSession dialobSession;
 
   private Program program;
@@ -64,13 +60,14 @@ public class CreateDialobSessionProgramVisitor implements ProgramVisitor {
 
   private final List<ErrorState> errorPrototypes = new ArrayList<>();
 
+  @Getter
   private final List<Command<?>> updates = new ArrayList<>();
 
   private final InitialValueResolver initialValueResolver;
 
   private Map<ItemId, List<Command<?>>> itemCommands;
 
-  private List<ItemState> rowGroups = Lists.newArrayList();
+  private List<ItemState> rowGroups = new ArrayList<>();
 
   private ItemId activePage;
 
@@ -102,7 +99,7 @@ public class CreateDialobSessionProgramVisitor implements ProgramVisitor {
     this.language = language;
     this.initialValueResolver = initialValueResolver;
     this.findProvidedValueSetEntries = findProvidedValueSetEntries;
-    this.itemCommands = itemCommands == null ? ImmutableMap.of() : itemCommands;
+    this.itemCommands = itemCommands == null ? Map.of() : itemCommands;
     this.activePage = activePage != null ? IdUtils.toId(activePage) : null;
     this.completed = completed;
     this.opened = opened;
@@ -239,8 +236,8 @@ public class CreateDialobSessionProgramVisitor implements ProgramVisitor {
 
   @Override
   public void end() {
-    // TODO this is way too complex. This restores row states from Questionnaire. This decouples DialosSession object from
-    // Questionnaire type. Problems is that this duplicates logic build to commands. Expression evaluation context needs to be simplified.
+    // TODO this is way too complex. This restores row states from Questionnaire. This decouples DialobSession object from
+    // Questionnaire type. Problem is that this duplicates logic build into commands. Expression evaluation context needs to be simplified.
     rowGroups
       .stream()
       .flatMap(rowGroup -> {
@@ -269,13 +266,12 @@ public class CreateDialobSessionProgramVisitor implements ProgramVisitor {
         // Find prototype for each id and instantiate itemstate from it
         ItemState newItem = prototype.withId(itemIdToCreate);
         newItem = program.findItemsBy(id -> IdUtils.matches(id, itemIdToCreate)).findFirst().map(item -> {
-          List<ItemId> rowItems = ImmutableList.of();
+          List<ItemId> rowItems = List.of();
           if (item instanceof Group) {
             Expression expression = ((Group)item).getItemsExpression();
-            if (expression instanceof RowItemsExpression) {
-              final Scope scope = ImmutableScope.of(itemIdToCreate, ImmutableSet.of());
-              RowItemsExpression rowItemsExpression = (RowItemsExpression) expression;
-              rowItems = rowItemsExpression.getItemIds().stream().map(itemId -> scope.mapTo(itemId, true)).collect(Collectors.toList());
+            if (expression instanceof RowItemsExpression rowItemsExpression) {
+              final Scope scope = ImmutableScope.of(itemIdToCreate, Set.of());
+              rowItems = rowItemsExpression.getItemIds().stream().map(itemId -> scope.mapTo(itemId, true)).toList();
             }
           }
           final Object newAnswer = initialValueResolver.apply(itemIdToCreate, item).orElse(null);
@@ -298,20 +294,17 @@ public class CreateDialobSessionProgramVisitor implements ProgramVisitor {
             .update().setItems(
               ((List<BigInteger>) rowGroup.getValue())
                 .stream()
-                .map(rowNumber -> ImmutableItemIndex.of(rowNumber.intValue(), Optional.of(rowGroup.getId()))).collect(toList())
+                .map(rowNumber -> (ItemId) ImmutableItemIndex.of(rowNumber.intValue(), Optional.of(rowGroup.getId()))).toList()
             ).get();
         }
         return rowGroup;
       })
       .forEach(items::add);
+    // find first whenActiveUpdated page, if activePage is unset
+    if (activePage == null) {
+      updates.add(CommandFactory.nextPage());
+    }
     this.dialobSession = new DialobSession(tenantId, sessionId, null, language, items, prototypeItems, valueSets, errors, errorPrototypes, completed, opened, lastAnswer);
   }
 
-  public List<Command<?>> getUpdates() {
-    return updates;
-  }
-
-  public DialobSession getDialobSession() {
-    return dialobSession;
-  }
 }
