@@ -1,5 +1,5 @@
 /*
- * Copyright © 2015 - 2021 ReSys (info@dialob.io)
+ * Copyright © 2015 - 2025 ReSys (info@dialob.io)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,8 +15,6 @@
  */
 package io.dialob.session.engine.session.command;
 
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Sets;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import io.dialob.session.engine.program.EvalContext;
 import io.dialob.session.engine.program.model.ConstantValue;
@@ -26,10 +24,9 @@ import io.dialob.session.engine.session.model.ItemState;
 import org.immutables.value.Value;
 
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-
-import static java.util.stream.Collectors.toList;
 
 @Value.Immutable
 public interface UpdateClassNames extends AbstractUpdateCommand<ItemId,ItemState>, ItemUpdateCommand {
@@ -40,11 +37,11 @@ public interface UpdateClassNames extends AbstractUpdateCommand<ItemId,ItemState
   @NonNull
   @Override
   default Set<EventMatcher> getEventMatchers() {
-    Set<EventMatcher> eventMatchers = getExpression().getEvalRequiredConditions();
+    Set<EventMatcher> set = new HashSet<>(getExpression().getEvalRequiredConditions());
     if (getTargetId().isPartial()) {
-      return Sets.union(eventMatchers, ImmutableSet.of(EventMatchers.whenItemAdded(getTargetId())));
+      set.add(EventMatchers.whenItemAdded(getTargetId()));
     }
-    return eventMatchers;
+    return Set.copyOf(set);
   }
 
   @NonNull
@@ -59,7 +56,7 @@ public interface UpdateClassNames extends AbstractUpdateCommand<ItemId,ItemState
     if (stringValues == null) {
       return Collections.emptyList();
     }
-    return stringValues.stream().map(stringValue -> stringValue.eval(context)).collect(toList());
+    return stringValues.stream().map(stringValue -> stringValue.eval(context)).toList();
   }
 
 }
