@@ -1,5 +1,5 @@
 /*
- * Copyright © 2015 - 2021 ReSys (info@dialob.io)
+ * Copyright © 2015 - 2025 ReSys (info@dialob.io)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,20 +21,20 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.mockito.Mockito.*;
 
 class InOperatorTest {
 
   @Test
-  public void shouldFindFromSet() {
+  void shouldFindFromSet() {
     Expression lhs = Mockito.mock(Expression.class);
     Expression rhs = Mockito.mock(Expression.class);
     EvalContext context = Mockito.mock(EvalContext.class);
 
     when(lhs.eval(context)).thenReturn("b");
-    when(rhs.eval(context)).thenReturn((Arrays.asList("b")));
+    when(rhs.eval(context)).thenReturn((List.of("b")));
 
     ImmutableInOperator op = ImmutableInOperator.builder()
       .lhs(lhs)
@@ -50,13 +50,13 @@ class InOperatorTest {
   }
 
   @Test
-  public void shouldNotFindFromSet() {
+  void shouldNotFindFromSet() {
     Expression lhs = Mockito.mock(Expression.class);
     Expression rhs = Mockito.mock(Expression.class);
     EvalContext context = Mockito.mock(EvalContext.class);
 
     when(lhs.eval(context)).thenReturn("b");
-    when(rhs.eval(context)).thenReturn((Arrays.asList("c")));
+    when(rhs.eval(context)).thenReturn((List.of("c")));
 
     ImmutableInOperator op = ImmutableInOperator.builder()
       .lhs(lhs)
