@@ -1,5 +1,5 @@
 /*
- * Copyright © 2015 - 2021 ReSys (info@dialob.io)
+ * Copyright © 2015 - 2025 ReSys (info@dialob.io)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,13 +15,14 @@
  */
 package io.dialob.session.engine.program.expr.arith;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import io.dialob.session.engine.program.EvalContext;
 import io.dialob.session.engine.program.ProgramBuilder;
 import io.dialob.session.engine.program.expr.OutputFormatter;
 import io.dialob.session.engine.program.model.Label;
-import io.dialob.session.engine.session.model.*;
+import io.dialob.session.engine.session.model.IdUtils;
+import io.dialob.session.engine.session.model.ImmutableValueSetId;
+import io.dialob.session.engine.session.model.ItemId;
+import io.dialob.session.engine.session.model.ValueSetState;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
@@ -29,9 +30,7 @@ import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Optional;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
@@ -55,7 +54,7 @@ class LocalizedLabelOperatorTest {
   }
 
   @Test
-  public void shouldReturnNullWhenLabelIsNotDefined() {
+  void shouldReturnNullWhenLabelIsNotDefined() {
     LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(Collections.emptyMap()));
     when(context.getLanguage()).thenReturn("fi");
     assertNull(operator.eval(context));
@@ -64,8 +63,8 @@ class LocalizedLabelOperatorTest {
   }
 
   @Test
-  public void shouldReturnLocalizeLabel() {
-    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(ImmutableMap.of("fi","Otsikko","en","Title")));
+  void shouldReturnLocalizeLabel() {
+    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(Map.of("fi","Otsikko","en","Title")));
     when(context.getLanguage()).thenReturn("fi").thenReturn("en");
     assertEquals("Otsikko", operator.eval(context));
     assertEquals("Title", operator.eval(context));
@@ -74,8 +73,8 @@ class LocalizedLabelOperatorTest {
   }
 
   @Test
-  public void shouldExpandVariablesNonExistentExapndsToNull() {
-    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(ImmutableMap.of("fi","Otsikko {var1}")));
+  void shouldExpandVariablesNonExistentExapndsToNull() {
+    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(Map.of("fi","Otsikko {var1}")));
     when(context.getLanguage()).thenReturn("fi");
     assertEquals("Otsikko null", operator.eval(context));
     verify(context, times(1)).getLanguage();
@@ -85,13 +84,13 @@ class LocalizedLabelOperatorTest {
   }
 
   private ItemId ref(String var1) {
-    return (ImmutableItemRef) IdUtils.toId(var1);
+    return IdUtils.toId(var1);
   }
 
 
   @Test
-  public void shouldExpandStringVariables() {
-    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(ImmutableMap.of("fi","Otsikko {var1}")));
+  void shouldExpandStringVariables() {
+    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(Map.of("fi","Otsikko {var1}")));
     when(context.getLanguage()).thenReturn("fi");
     when(context.getItemValue(ref("var1"))).thenReturn("hello");
     assertEquals("Otsikko hello", operator.eval(context));
@@ -103,8 +102,8 @@ class LocalizedLabelOperatorTest {
   }
 
   @Test
-  public void shouldExpandNumberVariablesWithFormmater() {
-    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(ImmutableMap.of("fi","Otsikko {var1:#,##0}")));
+  void shouldExpandNumberVariablesWithFormmater() {
+    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(Map.of("fi","Otsikko {var1:#,##0}")));
     when(context.getLanguage()).thenReturn("fi");
     when(context.getItemValue(ref("var1"))).thenReturn(123000);
     assertEquals("Otsikko 123 000", operator.eval(context));
@@ -113,8 +112,8 @@ class LocalizedLabelOperatorTest {
     verifyNoMoreInteractions(programBuilder, context);
   }
   @Test
-  public void shouldExpandDecimalVariablesWithFormmater() {
-    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(ImmutableMap.of("fi","Otsikko {var1:#,##0.00}")));
+  void shouldExpandDecimalVariablesWithFormmater() {
+    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(Map.of("fi","Otsikko {var1:#,##0.00}")));
     when(context.getLanguage()).thenReturn("fi");
     when(context.getItemValue(ref("var1"))).thenReturn(BigDecimal.valueOf(123000));
     assertEquals("Otsikko 123 000,00", operator.eval(context));
@@ -123,8 +122,8 @@ class LocalizedLabelOperatorTest {
     verifyNoMoreInteractions(programBuilder, context);
   }
   @Test
-  public void shouldExpandNumberlVariablesWithoutFormmater() {
-    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(ImmutableMap.of("fi","Otsikko {var1}")));
+  void shouldExpandNumberlVariablesWithoutFormmater() {
+    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(Map.of("fi","Otsikko {var1}")));
     when(context.getLanguage()).thenReturn("fi");
     when(context.getItemValue(ref("var1"))).thenReturn(123000);
     assertEquals("Otsikko 123000", operator.eval(context));
@@ -135,8 +134,8 @@ class LocalizedLabelOperatorTest {
     verifyNoMoreInteractions(programBuilder, context);
   }
   @Test
-  public void shouldExpandDecimallVariablesWithoutFormmater() {
-    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(ImmutableMap.of("fi","Otsikko {var1}")));
+  void shouldExpandDecimallVariablesWithoutFormmater() {
+    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(Map.of("fi","Otsikko {var1}")));
     when(context.getLanguage()).thenReturn("fi");
     when(context.getItemValue(ref("var1"))).thenReturn(BigDecimal.valueOf(123000.01));
     assertEquals("Otsikko 123000.01", operator.eval(context));
@@ -147,14 +146,14 @@ class LocalizedLabelOperatorTest {
     verifyNoMoreInteractions(programBuilder, context);
   }
   @Test
-  public void shouldInterpolateSelectionToValue() {
+  void shouldInterpolateSelectionToValue() {
     when(programBuilder.findValueSetIdForItem(IdUtils.toId("var1"))).thenReturn(Optional.of("vs1"));
 
-    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(ImmutableMap.of("fi","Otsikko {var1}")));
+    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(Map.of("fi","Otsikko {var1}")));
     when(context.getLanguage()).thenReturn("fi");
     when(context.getItemValue(ref("var1"))).thenReturn("x1");
     ValueSetState valueSet = Mockito.mock(ValueSetState.class);
-    when(valueSet.getEntries()).thenReturn(ImmutableList.of(ValueSetState.Entry.of("x1","Choice 1")));
+    when(valueSet.getEntries()).thenReturn(List.of(ValueSetState.Entry.of("x1","Choice 1")));
     when(context.getValueSetState(ImmutableValueSetId.of("vs1"))).thenReturn(Optional.of(valueSet));
     assertEquals("Otsikko Choice 1", operator.eval(context));
     verify(context, atLeastOnce()).getLanguage();
@@ -165,14 +164,14 @@ class LocalizedLabelOperatorTest {
     verifyNoMoreInteractions(programBuilder, context, valueSet);
   }
   @Test
-  public void shouldInterpolateSelectionToLowerCaseValue() {
+  void shouldInterpolateSelectionToLowerCaseValue() {
     when(programBuilder.findValueSetIdForItem(IdUtils.toId("var1"))).thenReturn(Optional.of("vs1"));
 
-    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(ImmutableMap.of("fi","Otsikko {var1:lowercase}")));
+    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(Map.of("fi","Otsikko {var1:lowercase}")));
     when(context.getLanguage()).thenReturn("fi");
     when(context.getItemValue(ref("var1"))).thenReturn("x1");
     ValueSetState valueSet = Mockito.mock(ValueSetState.class);
-    when(valueSet.getEntries()).thenReturn(ImmutableList.of(ValueSetState.Entry.of("x1","Choice 1")));
+    when(valueSet.getEntries()).thenReturn(List.of(ValueSetState.Entry.of("x1","Choice 1")));
     when(context.getValueSetState(ImmutableValueSetId.of("vs1"))).thenReturn(Optional.of(valueSet));
     assertEquals("Otsikko choice 1", operator.eval(context));
     verify(context, atLeastOnce()).getLanguage();
@@ -184,14 +183,14 @@ class LocalizedLabelOperatorTest {
   }
 
   @Test
-  public void shouldInterpolateSelectionToUpperCaseValue() {
+  void shouldInterpolateSelectionToUpperCaseValue() {
     when(programBuilder.findValueSetIdForItem(IdUtils.toId("var1"))).thenReturn(Optional.of("vs1"));
 
-    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(ImmutableMap.of("fi","Otsikko {var1:uppercase}")));
+    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(Map.of("fi","Otsikko {var1:uppercase}")));
     when(context.getLanguage()).thenReturn("fi");
     when(context.getItemValue(ref("var1"))).thenReturn("x1");
     ValueSetState valueSet = Mockito.mock(ValueSetState.class);
-    when(valueSet.getEntries()).thenReturn(ImmutableList.of(ValueSetState.Entry.of("x1","Choice 1")));
+    when(valueSet.getEntries()).thenReturn(List.of(ValueSetState.Entry.of("x1","Choice 1")));
     when(context.getValueSetState(ImmutableValueSetId.of("vs1"))).thenReturn(Optional.of(valueSet));
     assertEquals("Otsikko CHOICE 1", operator.eval(context));
     verify(context, atLeastOnce()).getLanguage();
@@ -202,8 +201,8 @@ class LocalizedLabelOperatorTest {
     verifyNoMoreInteractions(programBuilder, context, valueSet);
   }
   @Test
-  public void shouldInterpolateSelectionToKeyWhenFormatIsKey() {
-    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(ImmutableMap.of("fi","Otsikko {var1:key}")));
+  void shouldInterpolateSelectionToKeyWhenFormatIsKey() {
+    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(Map.of("fi","Otsikko {var1:key}")));
     when(context.getLanguage()).thenReturn("fi");
     when(context.getItemValue(ref("var1"))).thenReturn("x1");
     assertEquals("Otsikko x1", operator.eval(context));
@@ -214,15 +213,15 @@ class LocalizedLabelOperatorTest {
   }
 
   @Test
-  public void shouldInterpolateMultichoiceSelectionToValue() {
+  void shouldInterpolateMultichoiceSelectionToValue() {
     when(programBuilder.findValueSetIdForItem(IdUtils.toId("var1"))).thenReturn(Optional.of("vs1"));
 
-    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(ImmutableMap.of("fi","Otsikko {var1}")));
+    LocalizedLabelOperator operator = LocalizedLabelOperator.createLocalizedLabelOperator(programBuilder, Label.createLabel(Map.of("fi","Otsikko {var1}")));
     when(context.getLanguage()).thenReturn("fi");
     when(context.getItemValue(ref("var1"))).thenReturn(Arrays.asList("x1", "x2"));
 
     ValueSetState valueSet = Mockito.mock(ValueSetState.class);
-    when(valueSet.getEntries()).thenReturn(ImmutableList.of(
+    when(valueSet.getEntries()).thenReturn(List.of(
         ValueSetState.Entry.of("x1","Choice 1"),
         ValueSetState.Entry.of("x2","Choice 2")
       )
