@@ -1,5 +1,5 @@
 /*
- * Copyright © 2015 - 2021 ReSys (info@dialob.io)
+ * Copyright © 2015 - 2025 ReSys (info@dialob.io)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,7 +15,6 @@
  */
 package io.dialob.session.engine.session.command;
 
-import com.google.common.collect.ImmutableMap;
 import io.dialob.session.engine.program.EvalContext;
 import io.dialob.session.engine.session.command.event.ImmutableItemsChangedEvent;
 import io.dialob.session.engine.session.command.event.ImmutableTargetEvent;
@@ -27,8 +26,9 @@ import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertNotSame;
@@ -38,14 +38,14 @@ import static org.mockito.Mockito.*;
 class CreateRowGroupFromPrototypeCommandTest {
 
   @Test
-  public void shouldNotMakeAnyChangesIfPrototypeDoNotExists() {
+  void shouldNotMakeAnyChangesIfPrototypeDoNotExists() {
     EvalContext context = Mockito.mock(EvalContext.class);
     ItemStates states = Mockito.mock(ItemStates.class);
     ItemState groupState1 = Mockito.mock(ItemState.class);
     ItemState groupState2 = Mockito.mock(ItemState.class);
     when(context.getOriginalItemState(IdUtils.toId("g1"))).thenReturn(Optional.of(groupState1));
     when(context.findPrototype(IdUtils.toId("g1.*"))).thenReturn(Optional.empty());
-    when(states.getItemStates()).thenReturn(ImmutableMap.of(IdUtils.toId("g1"), groupState2));
+    when(states.getItemStates()).thenReturn(Map.of(IdUtils.toId("g1"), groupState2));
     CreateRowGroupFromPrototypeCommand command = ImmutableCreateRowGroupFromPrototypeCommand.of(IdUtils.toId("g1.*"), Collections.emptyList());
     ItemStates newStates = command.update(context, states);
     Assertions.assertSame(states, newStates);
@@ -58,18 +58,18 @@ class CreateRowGroupFromPrototypeCommandTest {
 
 
   @Test
-  public void shouldAddANewItemStateOnStateWhenPrototypeExists() {
+  void shouldAddANewItemStateOnStateWhenPrototypeExists() {
     EvalContext context = Mockito.mock(EvalContext.class);
     ItemStates states = Mockito.mock(ItemStates.class);
     ItemState groupState1 = Mockito.mock(ItemState.class);
     ItemState groupState2 = Mockito.mock(ItemState.class);
     when(states.getErrorStates()).thenReturn(Collections.emptyMap());
-    when(states.getItemStates()).thenReturn(ImmutableMap.of(IdUtils.toId("g1"), groupState2));
+    when(states.getItemStates()).thenReturn(Map.of(IdUtils.toId("g1"), groupState2));
     when(states.getValueSetStates()).thenReturn(Collections.emptyMap());
     when(context.findPrototype(IdUtils.toId("g1.*"))).thenReturn(Optional.of(new ItemState(IdUtils.toId("g1.*"), null, "text", null, true, null, null, null, null, null)));
     when(context.getOriginalItemState(IdUtils.toId("g1"))).thenReturn(Optional.of(groupState1));
-    when(groupState1.getItems()).thenReturn(Arrays.asList());
-    when(groupState2.getItems()).thenReturn(Arrays.asList(IdUtils.toId("g1.0")));
+    when(groupState1.getItems()).thenReturn(List.of());
+    when(groupState2.getItems()).thenReturn(List.of(IdUtils.toId("g1.0")));
     when(groupState1.getId()).thenReturn(IdUtils.toId("g1"));
     when(groupState2.getId()).thenReturn(IdUtils.toId("g1"));
 
@@ -89,7 +89,7 @@ class CreateRowGroupFromPrototypeCommandTest {
 
   @Test
   @Disabled
-  public void eventMatcherShouldReactOnItemsChangedEvent() {
+  void eventMatcherShouldReactOnItemsChangedEvent() {
     CreateRowGroupFromPrototypeCommand command = ImmutableCreateRowGroupFromPrototypeCommand.of(IdUtils.toId("g1.*.q1"), Collections.emptyList());
     Assertions.assertTrue(
       command.getEventMatchers().stream()
@@ -97,7 +97,7 @@ class CreateRowGroupFromPrototypeCommandTest {
   }
 
   @Test
-  public void eventMatcherShouldNotReactOnItemsChangedEventOfDifferentGroup() {
+  void eventMatcherShouldNotReactOnItemsChangedEventOfDifferentGroup() {
     CreateRowGroupFromPrototypeCommand command = ImmutableCreateRowGroupFromPrototypeCommand.of(IdUtils.toId("g1.*.q1"), Collections.emptyList());
     Assertions.assertFalse(
       command.getEventMatchers().stream()
