@@ -1,5 +1,5 @@
 /*
- * Copyright © 2015 - 2021 ReSys (info@dialob.io)
+ * Copyright © 2015 - 2025 ReSys (info@dialob.io)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,7 +15,6 @@
  */
 package io.dialob.session.boot.websocket;
 
-import com.google.common.collect.ImmutableMap;
 import io.dialob.api.form.ImmutableForm;
 import io.dialob.api.form.ImmutableFormMetadata;
 import io.dialob.api.form.ImmutableValidation;
@@ -40,6 +39,8 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.web.socket.config.annotation.EnableWebSocket;
 
 import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.function.Consumer;
 
@@ -67,14 +68,14 @@ import static org.springframework.boot.test.context.SpringBootTest.WebEnvironmen
 @EnableCaching
 @EnableWebSocket
 @EnableConfigurationProperties({DialobSettings.class})
-public class QuestionnaireRowGroupTest extends AbstractWebSocketTests {
+class QuestionnaireRowGroupTest extends AbstractWebSocketTests {
 
 
   @Inject
   private ApplicationEventPublisher applcationApplicationEventPublisher;
 
   @Test
-  public void shouldAddAndRemoveRows() throws Exception {
+  void shouldAddAndRemoveRows() throws Exception {
     ImmutableForm.Builder formBuilder1 = ImmutableForm.builder()
       .id("testGetQuestionnaires-123")
       .rev("1")
@@ -87,7 +88,7 @@ public class QuestionnaireRowGroupTest extends AbstractWebSocketTests {
       addItem(formBuilder, "g1", builder -> builder.type("rowgroup").putLabel("en","Ryhma").addItems("q1", "q2", "q3"));
       addItem(formBuilder, "q1", builder -> builder.type("text").putLabel("en","Kysymys 1"));
       addItem(formBuilder, "q2", builder -> builder.type("text").putLabel("en","Kysymys 2").addValidations(
-        ImmutableValidation.builder().message(ImmutableMap.of("en","error")).rule("answer = \"wrong answer\"").build()
+        ImmutableValidation.builder().message(Map.of("en","error")).rule("answer = \"wrong answer\"").build()
       ));
       addItem(formBuilder, "q3", builder -> builder.type("text").putLabel("en","Kysymys 3").activeWhen("q2 = \"correct answer\""));
       formBuilder.metadata(ImmutableFormMetadata.builder().label("Kysely").build());
@@ -103,9 +104,9 @@ public class QuestionnaireRowGroupTest extends AbstractWebSocketTests {
           .containsOnly(
             tuple(Action.Type.RESET,   null, null),
             tuple(Action.Type.LOCALE,  null, null),
-            tuple(Action.Type.ITEM, "questionnaire", asList("p1")),
+            tuple(Action.Type.ITEM, "questionnaire", List.of("p1")),
             tuple(Action.Type.ITEM, "g1", null),
-            tuple(Action.Type.ITEM, "p1", asList("g1"))
+            tuple(Action.Type.ITEM, "p1", List.of("g1"))
           );
       })
       .next()
@@ -117,7 +118,7 @@ public class QuestionnaireRowGroupTest extends AbstractWebSocketTests {
             tuple(Action.Type.ITEM, "g1.0.q1", null, "Kysymys 1"),
             tuple(Action.Type.ITEM, "g1.0.q2", null, "Kysymys 2"),
             tuple(Action.Type.ITEM, "g1.0", asList("g1.0.q1", "g1.0.q2", "g1.0.q3"), "Ryhma"),
-            tuple(Action.Type.ITEM, "g1", asList("g1.0"), "Ryhma")
+            tuple(Action.Type.ITEM, "g1", List.of("g1.0"), "Ryhma")
           );
       }).next()
       .addRow("g1")
@@ -137,7 +138,7 @@ public class QuestionnaireRowGroupTest extends AbstractWebSocketTests {
           .extracting("type", "ids", "item.id", "item.items")
           .containsOnly(
             tuple(Action.Type.REMOVE_ITEMS, Arrays.asList("g1.0","g1.0.q2","g1.0.q1"), null, null),
-            tuple(Action.Type.ITEM, null,       "g1", asList("g1.1"))
+            tuple(Action.Type.ITEM, null,       "g1", List.of("g1.1"))
           );
       }).next()
       .answerQuestion("g1.1.q2","wrong answer")
@@ -167,8 +168,8 @@ public class QuestionnaireRowGroupTest extends AbstractWebSocketTests {
           .containsOnly(
             tuple(Action.Type.REMOVE_ITEMS, Arrays.asList("g1.1","g1.1.q2","g1.1.q1"), null, null, null, null, null),
             tuple(Action.Type.REMOVE_ERROR,     null,                                      null, null, "g1.1.q2", "q2_error1", null),
-            tuple(Action.Type.ITEM,             null,"questionnaire", asList("p1"), null, null, Set.of(Action.Type.ANSWER, Action.Type.COMPLETE)),
-            tuple(Action.Type.ITEM,         null,                                      "g1", asList("g1.2"), null, null, Set.of(ADD_ROW))
+            tuple(Action.Type.ITEM,             null,"questionnaire", List.of("p1"), null, null, Set.of(Action.Type.ANSWER, Action.Type.COMPLETE)),
+            tuple(Action.Type.ITEM,         null,                                      "g1", List.of("g1.2"), null, null, Set.of(ADD_ROW))
           );
       }).next()
       .addRow("g1")
